[project]
name = "project-run"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.37.37",
    "django==5.2",
    "django-storages==1.14.6",
    "djangorestframework==3.16.0",
    "psycopg2-binary==2.9.10",
]

[tool.nitpick]
style = [
    "https://raw.githubusercontent.com/makafonov/dotfiles/main/config/nitpick-style.toml",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D1",
    "D203",
    "D213",
    "I001",
    "ISC001",
    "RUF001",
    "RUF002",
    "RUF003",
    "UP040",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = true
include_trailing_comma = true
combine_as_imports = true
line_length = 1

[tool.mypy]
plugins = [
    "mypy_drf_plugin.main",
    "mypy_django_plugin.main",
]
strict = true
show_error_context = true

[tool.django-stubs]
django_settings_module = "project_run.settings.local"

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.2.1",
    "djangorestframework-stubs[compatible-mypy]>=3.16.0",
    "isort>=6.0.1",
    "lefthook>=1.11.14",
    "mypy==1.15",
    "ruff>=0.12.1",
]
